<resources>
    <string name="app_name" translatable="false">Password Manager</string>
    <string name="welcome">Welcome</string>
    <string name="enter_masterkey">Enter MasterKey</string>
    <string name="create_masterkey">Create MasterKey</string>
    <string name="enter">Enter</string>
    <string name="save">Save</string>
    <string name="enter_site">Enter site</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="settings">Settings</string>
    <string name="edit_master_key">Edit MasterKey</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="confirm">Confirm</string>
    <string name="new_masterkey">New MasterKey</string>
    <string name="repeat_new_masterkey">Repeat new MasterKey</string>
    <string name="old_masterkey">Old MasterKey</string>
    <string name="wrong_master_key">Wrong Master key</string>
    <string name="add_note">Add password</string>
    <string name="edit_note">Edit password</string>
    <string name="masterkeys_dont_match">"New MasterKeys don't match!"</string>
    <string name="masterkeys_match">"Old MasterKey and new MaterKey mustn't be the same"</string>
    <string name="empty_field">"Empty field"</string>
    <string name="nulll" translatable="false">""</string>
    <string name="deletion_confirmation">Deletion confirmation</string>
    <string name="are_you_sure_you_want_to_delete_all_data_this_action_is_irreversible">Are you sure you want to delete all data? This action is irreversible</string>
    <string name="cancel">Cancel</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="are_you_sure_you_want_to_reset_the_masterkey">Are you sure you want to reset the MasterKey? This will delete all recorded data and passwords. This action is irreversible</string>
    <string name="reset_the_masterkey">Reset the MasterKey</string>
    <string name="fingerprint_not_available">Fingerprint not available</string>
    <string name="masterkey_not_specified">MasterKey not specified</string>
    <string name="ok">OK</string>
    <string name="authenticate_with_fingerprint">Authenticate with fingerprint</string>

</resources>