<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    android:focusableInTouchMode="true">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        app:layout_constrainedWidth="true"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/welcome"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="88dp"
        android:hint="@string/create_masterkey"
        app:boxBackgroundColor="@color/md_theme_secondaryContainer"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/md_theme_primaryContainer"
        app:boxStrokeErrorColor="@color/md_theme_errorContainer"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="4dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/md_theme_error"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/md_theme_onPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/masterKeyEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:textColor="@color/md_theme_inverseSurface"
            android:textColorHint="@color/md_theme_onPrimaryContainer" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterButton"
        style="?attr/materialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:text="@string/enter"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fingerprintButton"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/textFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLayout" />


    <Button
        android:id="@+id/fingerprintButton"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:contentDescription="@string/add_note"
        app:icon="@drawable/fingerprint_icon"
        app:layout_constraintBottom_toBottomOf="@+id/enterButton"
        app:layout_constraintEnd_toEndOf="@+id/textFieldLayout"
        app:layout_constraintStart_toEndOf="@+id/enterButton"
        app:layout_constraintTop_toTopOf="@+id/enterButton"
        app:srcCompat="@drawable/fingerprint_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetMasterKey"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/md_theme_secondaryContainer"
        android:text="@string/reset_the_masterkey"
        android:textColor="@color/md_theme_onSecondaryContainer"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterButton"
        app:strokeColor="@color/md_theme_onPrimaryContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>