<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    tools:context=".masterkeyedit.MasterKeyEditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_primaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:title="@string/edit_master_key" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldMasterKeyLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="126dp"
        android:hint="@string/old_masterkey"
        app:boxBackgroundColor="@color/md_theme_secondaryContainer"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/md_theme_primaryContainer"
        app:boxStrokeErrorColor="@color/md_theme_errorContainer"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="4dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/md_theme_error"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/md_theme_onPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldMasterKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:textColor="@color/md_theme_inverseSurface"
            android:textColorHint="@color/md_theme_onPrimaryContainer" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newMasterKeyLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/new_masterkey"
        app:boxBackgroundColor="@color/md_theme_secondaryContainer"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/md_theme_primaryContainer"
        app:boxStrokeErrorColor="@color/md_theme_errorContainer"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="4dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/md_theme_error"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/md_theme_onPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldMasterKeyLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newMasterKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:textColor="@color/md_theme_inverseSurface"
            android:textColorHint="@color/md_theme_onPrimaryContainer" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/againNewMasterKeyLayout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/repeat_new_masterkey"
        app:boxBackgroundColor="@color/md_theme_secondaryContainer"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/md_theme_primaryContainer"
        app:boxStrokeErrorColor="@color/md_theme_errorContainer"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="4dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/md_theme_error"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/md_theme_onPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newMasterKeyLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/againNewMasterKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@null"
            android:inputType="text"
            android:textColor="@color/md_theme_inverseSurface"
            android:textColorHint="@color/md_theme_onPrimaryContainer" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        style="?attr/materialButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:text="@string/confirm"
        android:textColor="@color/md_theme_onPrimaryContainer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/againNewMasterKeyLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>